[package]
name = "hive_mind"
description = "Shared memory crate designed for simplicity, safety, and extensibility"
version = "0.1.0"
edition = "2021"
authors = ["Jacob <jacob@lodenius.com>"]
license-file = "LICENSE"

# For crates.io
readme = "README.md"
repository = "https://github.com/jlodenius/hive_mind"
keywords = ["shmem", "shared", "memory", "inter-process", "process"]
categories = ["os::unix-apis", "memory-management"]

[dependencies]
libc = "0.2.153"
tracing = "0.1.40"

[dev-dependencies]
rand = "0.8"
