[package]
name = "neocortex"
description = "Shared memory crate designed for simplicity, safety, and extensibility"
version = "3.0.1"
edition = "2021"
documentation = "https://docs.rs/neocortex/latest/neocortex/"
authors = ["Jacob <jacob@lodenius.com>"]
license = "MIT OR Apache-2.0"
exclude = ["img/*"]
readme = "README.md"
repository = "https://github.com/jlodenius/neocortex"
keywords = ["shmem", "shared", "memory", "inter-process", "process"]
categories = ["os::unix-apis", "memory-management"]

[dependencies]
cfg-if = "1.0.0"
errno = "0.3.9"
libc = "0.2.153"
tracing = "0.1.40"

[dev-dependencies]
rand = "0.8"

[features]
semaphore = []
